<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_movie_overview_fanart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@color/tag_background_male"
            android:foreground="@color/movie_overview_fanart_overlay"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:visibility="visible"
                android:background="@drawable/background_movie_overview"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="160dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/activity_movie_overview_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|start"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:paddingTop="20dp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/activity_movie_overview_original_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/activity_movie_overview_series_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/activity_movie_overview_series_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/series"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/activity_movie_overview_series"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/activity_movie_overview_series_desc"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/activity_movie_overview_studio_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/activity_movie_overview_studio_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/studio"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/activity_movie_overview_studio"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/activity_movie_overview_studio_desc"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/activity_movie_overview_director_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/activity_movie_overview_director_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/director"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/activity_movie_overview_director"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/activity_movie_overview_director_desc"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/activity_movie_overview_premiered_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/activity_movie_overview_premiered_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/premiered"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/activity_movie_overview_premiered"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/activity_movie_overview_premiered_desc"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/activity_movie_overview_runtime_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/activity_movie_overview_runtime_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/runtime"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/activity_movie_overview_runtime"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/activity_movie_overview_runtime_desc"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/starring" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activity_movie_overview_actors_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/entry_actor"
                        tools:itemCount="3" />

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/characters" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activity_movie_overview_characters_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/entry_character"
                        tools:itemCount="3" />

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/tags" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activity_movie_overview_tags_location_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                        tools:listitem="@layout/entry_tag"
                        tools:itemCount="6" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activity_movie_overview_tags_simple_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                        tools:listitem="@layout/entry_tag"
                        tools:itemCount="6" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activity_movie_overview_tags_hermaphrodite_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                        tools:listitem="@layout/entry_tag"
                        tools:itemCount="6" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activity_movie_overview_tags_female_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                        tools:listitem="@layout/entry_tag"
                        tools:itemCount="6" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activity_movie_overview_tags_male_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                        tools:listitem="@layout/entry_tag"
                        tools:itemCount="6" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/activity_movie_overview_poster"
                android:layout_width="130dp"
                android:layout_height="195dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="120dp"
                android:scaleType="centerCrop"
                android:elevation="10dp"
                android:background="@drawable/background_poster"
                android:foreground="@drawable/foreground_rounded_corners"
                android:focusable="true"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>